Unable to killOp a repairDatabase operation

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 1.9.0
    • Affects Version/s: 1.6.0
    • Component/s: Stability
    • None
    • Environment:
      CentOS 5.4 x86_64
    • Linux
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The repairDatabase operation is unable to be killed with killOp operation, the command will appear to have been run successfully but in the currentOp list, the repairDatabase still appears and the temporary database still appears in the process of being created. The operation finally appears to get killed when it goes to start the building of the indexes. I unfortunately don't have any logs of the output from the commands at the time. I spoke with Mathias last night at the LOPSA meet up and he mentioned filing a bug report for this.

            Assignee:
            Aaron Staple (Inactive)
            Reporter:
            Justin Lintz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: