SERVER-2351 allow killop to interrupt a repair database command